--- a/app/src/main/res/layout/fragment_tennis_singles_basicgame.xml
+++ b/app/src/main/res/layout/fragment_tennis_singles_basicgame.xml
@@ -48,4 +48,75 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/tv_points_me" />
+
+    <TextView
+        android:id="@+id/tv_name_me"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        android:text="Player 1"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toTopOf="@+id/tv_points_me"
+        app:layout_constraintEnd_toStartOf="@+id/tv_name_you"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/tv_name_you"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        android:text="Player 2"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toTopOf="@+id/tv_points_you"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/tv_name_me" />
+
+    <TextView
+        android:id="@+id/tv_colon"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text=":"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="@+id/tv_points_you"
+        app:layout_constraintEnd_toStartOf="@+id/tv_points_you"
+        app:layout_constraintStart_toEndOf="@+id/tv_points_me"
+        app:layout_constraintTop_toTopOf="@+id/tv_points_you" />
+
+    <TextView
+        android:id="@+id/tv_colon2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text=":"
+        android:textSize="15sp"
+        app:layout_constraintBottom_toBottomOf="@+id/tv_games_you"
+        app:layout_constraintEnd_toStartOf="@+id/tv_games_you"
+        app:layout_constraintStart_toEndOf="@+id/tv_games_me"
+        app:layout_constraintTop_toTopOf="@+id/tv_games_you" />
+
+    <TextView
+        android:id="@+id/tv_games_me"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="75dp"
+        android:layout_marginTop="15dp"
+        android:text="0"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toStartOf="@+id/tv_games_you"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tv_points_me" />
+
+    <TextView
+        android:id="@+id/tv_games_you"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="75dp"
+        android:text="0"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/tv_games_me"
+        app:layout_constraintTop_toTopOf="@+id/tv_games_me" />
 </androidx.constraintlayout.widget.ConstraintLayout>
