--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,14 +7,15 @@
     tools:context=".MainActivity">
 
     <LinearLayout
-        android:id="@+id/linearLayout" android:layout_width="match_parent" android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent"
+        android:id="@+id/linearLayout" android:layout_width="match_parent" android:layout_height="match_parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
         android:orientation="vertical">
         <fragment
             android:id="@+id/fragment"
             android:name="martin.scorecounter.MainMenuFragment"
-            android:layout_width="match_parent" android:layout_height="100dp" />
+            android:layout_width="match_parent" android:layout_height="match_parent" />
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
