--- a/app/src/main/res/layout/fragment_tennis_doubles_game.xml
+++ b/app/src/main/res/layout/fragment_tennis_doubles_game.xml
@@ -132,7 +132,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
-                android:text="40"
+                android:text="0"
                 android:textAlignment="center"
                 android:textSize="17sp" />
 
@@ -141,7 +141,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
-                android:text="15"
+                android:text="0"
                 android:textAlignment="center"
                 android:textSize="17sp" />
         </LinearLayout>
@@ -163,10 +163,10 @@
         android:id="@+id/linearLayout3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="10dp"
+        android:layout_marginEnd="57dp"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="@+id/tv_points_you"
-        app:layout_constraintEnd_toStartOf="@+id/tv_points_me"
+        app:layout_constraintEnd_toStartOf="@+id/tv_colon"
         app:layout_constraintTop_toTopOf="@+id/tv_points_you">
 
 
@@ -186,7 +186,7 @@
         android:id="@+id/tv_points_me"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="20dp"
+        android:layout_marginEnd="15dp"
         android:text="0"
         android:textSize="34sp"
         app:layout_constraintBottom_toBottomOf="@+id/tv_points_you"
@@ -220,10 +220,10 @@
         android:id="@+id/linearLayout4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
+        android:layout_marginStart="57dp"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="@+id/tv_points_you"
-        app:layout_constraintStart_toEndOf="@+id/tv_points_you"
+        app:layout_constraintStart_toEndOf="@+id/tv_colon"
         app:layout_constraintTop_toTopOf="@+id/tv_points_you">
 
 
@@ -243,7 +243,7 @@
         android:id="@+id/tv_points_you"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
+        android:layout_marginStart="15dp"
         android:layout_marginTop="20dp"
         android:text="0"
         android:textSize="34sp"
