--- a/app/src/main/res/layout/fragment_tennis_doubles_settings.xml
+++ b/app/src/main/res/layout/fragment_tennis_doubles_settings.xml
@@ -12,13 +12,27 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="48dp"
         android:ems="10"
-        android:inputType="textPersonName"
         android:hint="Player One"
+        android:inputType="textPersonName"
         android:minHeight="48dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.25"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/lbl_ts_heading" />
+
+
+    <EditText
+        android:id="@+id/ti_ts_player12"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:hint="Player Two"
+        android:inputType="textPersonName"
+        android:minHeight="48dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.253"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/ti_ts_player1" />
 
     <EditText
         android:id="@+id/ti_ts_player2"
@@ -26,18 +40,29 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
         android:ems="10"
+        android:hint="Player One"
+        android:inputType="textPersonName"
+        android:minHeight="48dp"
+        app:layout_constraintStart_toStartOf="@+id/ti_ts_player1"
+        app:layout_constraintTop_toBottomOf="@+id/ti_ts_player12" />
+
+
+    <EditText
+        android:id="@+id/ti_ts_player22"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:ems="10"
         android:hint="Player Two"
         android:inputType="textPersonName"
         android:minHeight="48dp"
         app:layout_constraintStart_toStartOf="@+id/ti_ts_player1"
-        app:layout_constraintTop_toBottomOf="@+id/ti_ts_player1" />
-
+        app:layout_constraintTop_toBottomOf="@+id/ti_ts_player2" />
 
     <TextView
         android:id="@+id/lbl_ts_player1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Player 1:"
+        android:text="Team 1:"
         android:labelFor="@id/lbl_ts_player1"
         app:layout_constraintBottom_toTopOf="@+id/ti_ts_player1"
         app:layout_constraintStart_toStartOf="@+id/ti_ts_player1" />
@@ -46,7 +71,7 @@
         android:id="@+id/lbl_ts_player2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Player 2:"
+        android:text="Team 2:"
         android:labelFor="@id/lbl_ts_player2"
         app:layout_constraintBottom_toTopOf="@+id/ti_ts_player2"
         app:layout_constraintStart_toStartOf="@+id/ti_ts_player2" />
@@ -57,7 +82,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         android:fontFamily="sans-serif-black"
-        android:text="Tennis Singles - Settings"
+        android:text="Tennis Doubles - Settings"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -76,7 +101,7 @@
         android:id="@+id/rg_ts_setsToWin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="48dp"
+        android:layout_marginTop="40dp"
         android:checkedButton="@id/rb_ts_setstowin2"
         android:divider="@drawable/divider"
         android:orientation="horizontal"
@@ -113,7 +138,7 @@
         android:id="@+id/sw_matchTieBreak"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="8dp"
         android:minHeight="48dp"
         android:text="Match Tie Break"
         android:textColor="#777777"
@@ -124,7 +149,7 @@
         android:id="@+id/btn_ts_settings_start"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="25dp"
+        android:layout_marginTop="10dp"
         android:text="START GAME"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -144,29 +169,29 @@
         android:id="@+id/rg_ts_firstserve"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="48dp"
+        android:layout_marginTop="40dp"
+        android:checkedButton="@id/rb_ts_firstserveP1"
         android:divider="@drawable/divider"
         android:orientation="horizontal"
         android:showDividers="middle"
-        android:checkedButton="@id/rb_ts_firstserveP1"
         app:layout_constraintStart_toStartOf="@+id/ti_ts_player2"
-        app:layout_constraintTop_toBottomOf="@+id/ti_ts_player2">
+        app:layout_constraintTop_toBottomOf="@+id/ti_ts_player22">
 
         <RadioButton
             android:id="@+id/rb_ts_firstserveP1"
-            android:layout_height="48dp"
             android:layout_width="wrap_content"
-            android:text="Player 1"
+            android:layout_height="48dp"
             android:layout_marginHorizontal="5dp"
-            android:textSize="14sp"/>
+            android:text="Team 1"
+            android:textSize="14sp" />
 
         <RadioButton
             android:id="@+id/rb_ts_firstserveP2"
-            android:layout_height="48dp"
             android:layout_width="wrap_content"
-            android:text="Player 2"
+            android:layout_height="48dp"
             android:layout_marginHorizontal="5dp"
-            android:textSize="14sp"/>
+            android:text="Team 2"
+            android:textSize="14sp" />
     </RadioGroup>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
