--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,6 +11,7 @@
     <color name="tgrey">#55000000</color>
     <color name="tblack">#AA000000</color>
     <color name="tbreak">#C39E2F</color>
+    <color name="tred">#CF2525</color>
     <color name="tmp">#4CAF50</color>
 
     <color name="tblue">#35AAD3</color>
