--- a/app/src/main/res/layout/fragment_tennis_singles_game.xml
+++ b/app/src/main/res/layout/fragment_tennis_singles_game.xml
@@ -39,7 +39,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="5dp"
-                    android:text="Martin"
+                    android:text="Player 1"
                     android:textSize="17sp"/>
 
                 <TextView
@@ -47,7 +47,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="5dp"
-                    android:text="Laura"
+                    android:text="Player 2"
                     android:textSize="17sp"/>
 
             </LinearLayout>
@@ -132,7 +132,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
-                android:text="40"
+                android:text="0"
+                android:textColor="@color/tred"
+
                 android:textAlignment="center"
                 android:textSize="17sp" />
 
@@ -141,7 +143,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
-                android:text="15"
+                android:text="0"
+                android:textColor="@color/tred"
                 android:textAlignment="center"
                 android:textSize="17sp" />
         </LinearLayout>
@@ -188,6 +191,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="20dp"
         android:text="0"
+        android:textColor="@color/tred"
         android:textSize="34sp"
         app:layout_constraintBottom_toBottomOf="@+id/tv_points_you"
         app:layout_constraintEnd_toStartOf="@+id/tv_colon" />
@@ -246,6 +250,7 @@
         android:layout_marginStart="20dp"
         android:layout_marginTop="20dp"
         android:text="0"
+        android:textColor="@color/tred"
         android:textSize="34sp"
         app:layout_constraintStart_toEndOf="@+id/tv_colon"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />
@@ -269,6 +274,17 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/btn_pointP1" />
+
+    <Button
+        android:id="@+id/btn_back2Menu"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:text="Back to Menu"
+        android:layout_marginBottom="50dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:visibility="gone"/>
 
 
     <androidx.core.widget.NestedScrollView
