--- a/app/src/main/res/layout/fragment_main_menu.xml
+++ b/app/src/main/res/layout/fragment_main_menu.xml
@@ -8,29 +8,44 @@
 
     <Button
         android:id="@+id/btn_mm_tennis_singles"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp"
-        android:text="Tennis Singles"
+        android:layout_width="200dp"
+        android:layout_height="100dp"
+        android:layout_marginVertical="10dp"
         android:drawableTop="@drawable/ic_tennis_singles"
+        android:text="Tennis Singles"
         app:layout_constraintBottom_toTopOf="@+id/btn_mm_tennis_doubles"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_chainStyle="packed" />
 
     <Button
         android:id="@+id/btn_mm_tennis_doubles"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp"
-        android:text="Tennis Doubles"
+        android:layout_width="200dp"
+        android:layout_height="100dp"
+        android:layout_marginVertical="10dp"
         android:drawableTop="@drawable/ic_tennis_doubles"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:text="Tennis Doubles"
+        app:layout_constraintBottom_toTopOf="@+id/btn_mm_tennis_history"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btn_mm_tennis_singles" />
+
+    <Button
+        android:id="@+id/btn_mm_tennis_history"
+        android:layout_width="200dp"
+        android:layout_height="100dp"
+        android:layout_marginVertical="10dp"
+        android:drawableTop="@drawable/ic_tennis_history"
+        android:text="Game History"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn_mm_tennis_doubles" />
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
