--- a/app/src/main/res/layout/fragment_tennis_singles_game.xml
+++ b/app/src/main/res/layout/fragment_tennis_singles_game.xml
@@ -52,8 +52,6 @@
 
             </LinearLayout>
 
-
-
         </LinearLayout>
 
         <LinearLayout
@@ -155,7 +153,7 @@
         android:id="@+id/p1_name_big"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="10dp"
+        android:layout_marginEnd="5dp"
         android:text="Player 1"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="@+id/tv_points_me"
@@ -166,10 +164,10 @@
         android:id="@+id/linearLayout3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="10dp"
+        android:layout_marginEnd="60dp"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="@+id/tv_points_you"
-        app:layout_constraintEnd_toStartOf="@+id/tv_points_me"
+        app:layout_constraintEnd_toStartOf="@+id/tv_colon"
         app:layout_constraintTop_toTopOf="@+id/tv_points_you">
 
 
@@ -189,7 +187,7 @@
         android:id="@+id/tv_points_me"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="20dp"
+        android:layout_marginEnd="15dp"
         android:text="0"
         android:textColor="@color/tred"
         android:textSize="34sp"
@@ -213,7 +211,7 @@
         android:id="@+id/p2_name_big"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
+        android:layout_marginStart="5dp"
         android:text="Player 2"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="@+id/tv_points_you"
@@ -224,10 +222,10 @@
         android:id="@+id/linearLayout4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
+        android:layout_marginStart="60dp"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="@+id/tv_points_you"
-        app:layout_constraintStart_toEndOf="@+id/tv_points_you"
+        app:layout_constraintStart_toEndOf="@+id/tv_colon"
         app:layout_constraintTop_toTopOf="@+id/tv_points_you">
 
 
@@ -247,7 +245,7 @@
         android:id="@+id/tv_points_you"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
+        android:layout_marginStart="15dp"
         android:layout_marginTop="20dp"
         android:text="0"
         android:textColor="@color/tred"
